# cplusplus-tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: SetupProjectStructure.ps1  SetupProjectStructure.sh  architecture.md  build.md  index.md  setup.md
include/: Game.h  Game.hpp
src/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
tests/: GameTests.cpp
